Aligned all items to prevent duplicate styling in children elements

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -14,6 +14,7 @@ body{
 }
 
 #root{
+  align-items: center;
   display: flex;
   flex-direction: column;
   margin-bottom: 10px;
